# 42sh

./: Makefile  README.md  grammar  meson.build  meson_options.txt
src/: meson.build
src/ast/: ast.c  ast.h  meson.build
src/basic_prompt/: main.c
src/commands/: echo.c  echo.h  exec_command.c  exec_commands.c  exec_commands.h  exec_true_false.c  meson.build
src/execution/: exec.h  exec_all.c  exec_node_andor.c  exec_node_command.c  exec_node_else.c  exec_node_for.c  exec_node_if.c  exec_node_not.c  exec_node_pipeline.c  exec_node_redirection.c  exec_node_var.c  exec_node_while.c  meson.build
src/execution/redirections/: meson.build  redir_chevron_left.c  redir_chevron_left_and.c  redir_chevron_left_right.c  redir_chevron_right.c  redir_chevron_right_and.c  redir_chevron_right_or.c  redir_double_chevron_left.c  redir_double_chevron_left_dash.c  redir_double_chevron_right.c  redirections.h
src/expands/: expands.c  expands.h  meson.build
src/io/: cstream.c
src/lexer/: lexer.c  lexer.h  main  token.c  token.h
src/parser/: ast-if.c  main  meson.build  parser.c  parser.h  parser2.c  rules.c  rules.h
src/parser/parse_grammar/: meson.build  parse_and_or.c  parse_annexe.c  parse_cmd.c  parse_compound_list.c  parse_do_group.c  parse_dogroup.c  parse_element.c  parse_else_clause.c  parse_error.c  parse_func_dec.c  parse_input.c  parse_linebreak.c  parse_list.c  parse_pipeline.c  parse_prefix.c  parse_redirection.c  parse_rule_case.c  parse_rule_for.c  parse_rule_if.c  parse_rule_shell_cmd.c  parse_rule_until.c  parse_rule_while.c  parse_shell_cmd.c  parse_simple_cmd.c
src/parser/parse_grammar/redirections/: meson.build  redir_chevron_left.c  redir_chevron_left_and.c  redir_chevron_left_right.c  redir_chevron_right.c  redir_chevron_right_and.c  redir_chevron_right_or.c  redir_double_chevron_left.c  redir_double_chevron_left_dash.c  redir_double_chevron_right.c  redirections.h
src/utils/: clist.c  clist.h  meson.build
src/utils/vector/: main.c  meson.build  vector.c  vector.h
src/variables/: meson.build  var.c  var.h
tests/: test.sh  test_echo  test_for  test_if  test_variables  test_while  unique_test.sh
tests/dir_unique_tests/: basic_tests  test_andor  test_echo  test_for  test_if  test_redir  test_variables  test_while
tests/pediluve/: ascii_house.sh  create_files.sh  digit.sh  fact_iter.sh  my_file.sh  print_n.sh
