all_sources += files(
    'parse_and_or.c',
    'parse_cmd.c',
    'parse_compound_list.c',
    'parse_element.c',
    'parse_else_clause.c',
    'parse_error.c',
    'parse_func_dec.c',
    'parse_input.c',
    'parse_linebreak.c',
    'parse_list.c',
    'parse_pipeline.c',
    'parse_prefix.c',
    'parse_redirection.c',
    'parse_rule_case.c',
    'parse_rule_for.c',
    'parse_rule_if.c',
    'parse_rule_shell_cmd.c',
    'parse_rule_until.c',
    'parse_rule_while.c',
    'parse_shell_cmd.c',
    'parse_simple_cmd.c',
    'parse_dogroup.c',
)
