all_sources += files(
    'redir_chevron_left_and.c',
    'redir_chevron_left.c',
    'redir_chevron_left_right.c',
    'redir_chevron_right_and.c',
    'redir_chevron_right_or.c',
    'redir_chevron_right.c',
    'redir_double_chevron_left.c',
    'redir_double_chevron_left_dash.c',
    'redir_double_chevron_right.c',
)
